@@ -28,6 +28,7 @@ CHANGELOG Roundcube Webmail
 - Fix handling unicode characters in links (#1489898)
 - Fix incorrect handling of HTML comments in messages sanitization code (#1489904)
 - Fix so current page is reset on list-mode change (#1489907)
+- Fix so responses menu hides on click in classic skin (#1489915)
 
 RELEASE 1.0.1
 -------------
